# mcp-ansible

./: .gitignore  README.md  pyproject.toml
ansible_mcp/: server.py
mcp_ansible/: __init__.py  server.py
