[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-ansible"
dynamic = ["version"]
description = "Ansible MCP server for linting, syntax-checking, and validating Ansible playbooks and roles"
license = { file = "LICENSE" }
authors = [
    { name = "Max Bergmann" },
]
keywords = ["mcp", "ansible"]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3",
    "ansible-core>=2.21.0",
    "ansible-lint>=26.4.0",
]

[project.scripts]
mcp-ansible = "mcp_ansible.server:main"

[project.urls]
Issues = "https://github.com/bergmann-max/mcp-ansible/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "build>=1.2",
]

[tool.hatch.version]
path = "mcp_ansible/__init__.py"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "ansible.*",
    "ansible_lint.*",
    "fastmcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["mcp_ansible"]
branch = true
